--- a/views/feedback/thankyou.ejs
+++ b/views/feedback/thankyou.ejs
@@ -30,7 +30,7 @@ body {
 }
 .quotation,
 .thankyou {
-	background-image: url('bg-textwerk.jpg');
+	background-image: url('../bg-textwerk.jpg');
 	background-size: cover;
 	background-repeat: no-repeat;
     background-attachment: fixed;
