--- a/views/feedback/thankyou.ejs
+++ b/views/feedback/thankyou.ejs
@@ -5,7 +5,7 @@
 <body class="quotation">
     <div id="container">
         <div style="margin:auto;margin-top:400px; width: 200px">
-          <h2>THANK YOU FOR YOUR FEEDBACK</h2>
+          <h2>Bedankt voor je feedback!</h2>
         </div>
     </div>
 </body>
