--- a/views/login.ejs
+++ b/views/login.ejs
@@ -8,6 +8,6 @@
 	<input type="password" name="password"/>
 	</div>
 	<div>
-	<input type="submit" value="Submit"/>
+	<input type="submit" value="Download CSV"/>
 	</div>
 </form>
